added subject extraction component added subject extraction script

--- a/research/src/recommender_research.ipynb
+++ b/research/src/recommender_research.ipynb
@@ -451,7 +451,10 @@
    "cell_type": "code",
    "execution_count": 668,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -616,7 +619,10 @@
    "cell_type": "code",
    "execution_count": 669,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -1489,7 +1495,9 @@
   {
    "cell_type": "code",
    "execution_count": 569,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2728,13 +2736,7 @@
       "    198\n",
       "    199\n",
       "    200\n",
-      "    201\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    201\n",
       "    202\n",
       "    203\n",
       "    204\n",
@@ -3934,13 +3936,7 @@
       "    24\n",
       "    25\n",
       "    26\n",
-      "    27\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    27\n",
       "    28\n",
       "    29\n",
       "    30\n",
@@ -5184,13 +5180,7 @@
       "    18\n",
       "    19\n",
       "103\n",
-      "    0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    0\n",
       "    1\n",
       "    2\n",
       "    3\n",
@@ -6455,13 +6445,7 @@
       "    17\n",
       "    18\n",
       "    19\n",
-      "    20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    20\n",
       "    21\n",
       "    22\n",
       "    23\n",
@@ -7708,13 +7692,7 @@
       "    6\n",
       "    7\n",
       "    8\n",
-      "    9\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    9\n",
       "    10\n",
       "    11\n",
       "    12\n",
@@ -8967,13 +8945,7 @@
       "    50\n",
       "    51\n",
       "    52\n",
-      "    53\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    53\n",
       "    54\n",
       "    55\n",
       "    56\n",
@@ -10231,13 +10203,7 @@
       "    31\n",
       "    32\n",
       "    33\n",
-      "    34\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    34\n",
       "    35\n",
       "    36\n",
       "    37\n",
@@ -11509,13 +11475,7 @@
       "    11\n",
       "    12\n",
       "    13\n",
-      "    14\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    14\n",
       "    15\n",
       "    16\n",
       "    17\n",
@@ -12771,13 +12731,7 @@
       "    27\n",
       "371\n",
       "    0\n",
-      "    1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    1\n",
       "    2\n",
       "    3\n",
       "    4\n",
@@ -14035,13 +13989,7 @@
       "    59\n",
       "    60\n",
       "    61\n",
-      "    62\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    62\n",
       "    63\n",
       "    64\n",
       "    65\n",
@@ -15270,13 +15218,7 @@
       "439\n",
       "    0\n",
       "    1\n",
-      "    2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    2\n",
       "    3\n",
       "    4\n",
       "    5\n",
@@ -16483,13 +16425,7 @@
       "    8\n",
       "    9\n",
       "    10\n",
-      "    11\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    11\n",
       "    12\n",
       "    13\n",
       "    14\n",
@@ -17382,7 +17318,10 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -17542,13 +17481,7 @@
       "AttributeMerger: Elapsed time: 0.0000 seconds\n",
       "AttributeMerger: Elapsed time: 0.0000 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0001 seconds\n",
-      "SubjectContextPreprocessor: Elapsed time: 0.0001 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SubjectContextPreprocessor: Elapsed time: 0.0001 seconds\n",
       "AdvancedSubjectContextExtractor: Elapsed time: 0.0246 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0014 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0022 seconds\n",
@@ -17700,13 +17633,7 @@
       "TextAnnotator: Elapsed time: 1.6509 seconds\n",
       "TextAnnotator: Elapsed time: 1.5981 seconds\n",
       "UdapiFromConlluTransformer: Elapsed time: 0.0339 seconds\n",
-      "UdapiFromConlluTransformer: Elapsed time: 0.0423 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "UdapiFromConlluTransformer: Elapsed time: 0.0423 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.1403 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.1502 seconds\n",
       "UdapiToStrTransformer: Elapsed time: 0.0001 seconds\n",
@@ -17868,13 +17795,7 @@
       "AttributeMerger: Elapsed time: 0.0000 seconds\n",
       "AttributeMerger: Elapsed time: 0.0000 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0001 seconds\n",
-      "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n",
       "AdvancedSubjectContextExtractor: Elapsed time: 0.0470 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0061 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0105 seconds\n",
@@ -18037,13 +17958,7 @@
       "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0001 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n",
-      "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n",
       "AdvancedSubjectContextExtractor: Elapsed time: 23.6431 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0049 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0059 seconds\n",
@@ -18209,13 +18124,7 @@
       "SubjectContextPreprocessor: Elapsed time: 0.0011 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0020 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0010 seconds\n",
-      "SubjectContextPreprocessor: Elapsed time: 0.0007 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SubjectContextPreprocessor: Elapsed time: 0.0007 seconds\n",
       "TextAnnotator: Elapsed time: 0.0678 seconds\n",
       "TextAnnotator: Elapsed time: 0.0676 seconds\n",
       "UdapiFromConlluTransformer: Elapsed time: 0.0017 seconds\n",
@@ -18371,13 +18280,7 @@
       "AttributeMerger: Elapsed time: 0.0000 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0001 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0001 seconds\n",
-      "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n",
       "AdvancedSubjectContextExtractor: Elapsed time: 0.1837 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0013 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0054 seconds\n",
@@ -18532,13 +18435,7 @@
       "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n",
       "AdvancedSubjectContextExtractor: Elapsed time: 0.0053 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0181 seconds\n",
-      "SubjectContextPreprocessor: Elapsed time: 0.0096 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SubjectContextPreprocessor: Elapsed time: 0.0096 seconds\n",
       "TextAnnotator: Elapsed time: 1.4432 seconds\n",
       "UdapiFromConlluTransformer: Elapsed time: 0.0410 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.1377 seconds\n",
@@ -18696,13 +18593,7 @@
       "UdapiFromConlluTransformer: Elapsed time: 0.0011 seconds\n",
       "UdapiFromConlluTransformer: Elapsed time: 0.0011 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0164 seconds\n",
-      "ConlluSubjectContextPreprocessor: Elapsed time: 0.1202 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "ConlluSubjectContextPreprocessor: Elapsed time: 0.1202 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.1879 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.2940 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.3835 seconds\n",
@@ -18854,13 +18745,7 @@
       "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n",
       "AdvancedSubjectContextExtractor: Elapsed time: 0.0271 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0159 seconds\n",
-      "SubjectContextPreprocessor: Elapsed time: 0.0089 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SubjectContextPreprocessor: Elapsed time: 0.0089 seconds\n",
       "TextAnnotator: Elapsed time: 1.1827 seconds\n",
       "UdapiFromConlluTransformer: Elapsed time: 0.0302 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0917 seconds\n",
@@ -19010,13 +18895,7 @@
       "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n",
-      "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n",
       "AdvancedSubjectContextExtractor: Elapsed time: 2.0772 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0305 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0072 seconds\n",
@@ -19169,13 +19048,7 @@
       "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n",
       "AdvancedSubjectContextExtractor: Elapsed time: 0.0206 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0029 seconds\n",
-      "SubjectContextPreprocessor: Elapsed time: 0.0055 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SubjectContextPreprocessor: Elapsed time: 0.0055 seconds\n",
       "TextAnnotator: Elapsed time: 0.2298 seconds\n",
       "UdapiFromConlluTransformer: Elapsed time: 0.0088 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0194 seconds\n",
@@ -19337,13 +19210,7 @@
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0263 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0261 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0238 seconds\n",
-      "ConlluSubjectContextPreprocessor: Elapsed time: 0.0212 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "ConlluSubjectContextPreprocessor: Elapsed time: 0.0212 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0227 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0334 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.1400 seconds\n",
@@ -19497,13 +19364,7 @@
       "SubjectContextPreprocessor: Elapsed time: 0.0000 seconds\n",
       "AdvancedSubjectContextExtractor: Elapsed time: 0.0092 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0023 seconds\n",
-      "SubjectContextPreprocessor: Elapsed time: 0.0007 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SubjectContextPreprocessor: Elapsed time: 0.0007 seconds\n",
       "TextAnnotator: Elapsed time: 0.1713 seconds\n",
       "UdapiFromConlluTransformer: Elapsed time: 0.0029 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0219 seconds\n",
@@ -19662,13 +19523,7 @@
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0244 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0259 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0248 seconds\n",
-      "ConlluSubjectContextPreprocessor: Elapsed time: 0.0405 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "ConlluSubjectContextPreprocessor: Elapsed time: 0.0405 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0346 seconds\n",
       "UdapiToStrTransformer: Elapsed time: 0.0001 seconds\n",
       "UdapiToStrTransformer: Elapsed time: 0.0002 seconds\n",
@@ -19831,13 +19686,7 @@
       "SubjectContextPreprocessor: Elapsed time: 0.0043 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0024 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0019 seconds\n",
-      "SubjectContextPreprocessor: Elapsed time: 0.0026 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SubjectContextPreprocessor: Elapsed time: 0.0026 seconds\n",
       "TextAnnotator: Elapsed time: 0.3903 seconds\n",
       "TextAnnotator: Elapsed time: 0.2855 seconds\n",
       "UdapiFromConlluTransformer: Elapsed time: 0.0075 seconds\n",
@@ -20000,13 +19849,7 @@
       "SubjectContextPreprocessor: Elapsed time: 0.0026 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0010 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0023 seconds\n",
-      "SubjectContextPreprocessor: Elapsed time: 0.0012 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SubjectContextPreprocessor: Elapsed time: 0.0012 seconds\n",
       "TextAnnotator: Elapsed time: 0.1632 seconds\n",
       "TextAnnotator: Elapsed time: 0.1148 seconds\n",
       "UdapiFromConlluTransformer: Elapsed time: 0.0034 seconds\n",
@@ -20169,13 +20012,7 @@
       "AdvancedSubjectContextExtractor: Elapsed time: 0.0235 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0044 seconds\n",
       "SubjectContextPreprocessor: Elapsed time: 0.0013 seconds\n",
-      "TextAnnotator: Elapsed time: 0.1855 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "TextAnnotator: Elapsed time: 0.1855 seconds\n",
       "UdapiFromConlluTransformer: Elapsed time: 0.0049 seconds\n",
       "ConlluSubjectContextPreprocessor: Elapsed time: 0.0112 seconds\n",
       "UdapiToStrTransformer: Elapsed time: 0.0000 seconds\n",
@@ -21622,7 +21459,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -22996,13 +22835,7 @@
       "18428\n",
       "18429\n",
       "18430\n",
-      "18431\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "18431\n",
       "18432\n",
       "18433\n",
       "18434\n",
@@ -24424,13 +24257,7 @@
       "16478\n",
       "16479\n",
       "16480\n",
-      "16481\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "16481\n",
       "16482\n",
       "16483\n",
       "16484\n",
@@ -25812,13 +25639,7 @@
       "17259\n",
       "17260\n",
       "17261\n",
-      "17262\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "17262\n",
       "17263\n",
       "17264\n",
       "17265\n",
@@ -27190,13 +27011,7 @@
       "11586\n",
       "11587\n",
       "11588\n",
-      "11589\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "11589\n",
       "11590\n",
       "11591\n",
       "11592\n",
@@ -28576,13 +28391,7 @@
       "14852\n",
       "14853\n",
       "14854\n",
-      "14855\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "14855\n",
       "14856\n",
       "14857\n",
       "14858\n",
@@ -30015,13 +29824,7 @@
       "11725\n",
       "11726\n",
       "11727\n",
-      "11728\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "11728\n",
       "11729\n",
       "11730\n",
       "11731\n",
@@ -31160,7 +30963,10 @@
    "cell_type": "code",
    "execution_count": 712,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -31213,7 +31019,12 @@
   {
    "cell_type": "code",
    "execution_count": 740,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -44817,7 +44628,12 @@
   {
    "cell_type": "code",
    "execution_count": 742,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -50165,7 +49981,12 @@
   {
    "cell_type": "code",
    "execution_count": 734,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -50619,6 +50440,35 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 782,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.spatial.distance import cdist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 787,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.]])"
+      ]
+     },
+     "execution_count": 787,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cdist([(0,1)],[(-1,0)],'cosine')"
+   ]
   }
  ],
  "metadata": {
