--- a/research/src/udpipe_research.ipynb
+++ b/research/src/udpipe_research.ipynb
@@ -11,18 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load model from the given file;\n",
     "# if the file does not exist, expect a Segmentation fault\n",
-    "model = Model.load(\"udpipe/udpipe-ud-2.4-190531/czech-pdt-ud-2.4-190531.udpipe\")"
+    "model = Model.load(\"C:/x/diplomka/research/model/udpipe/udpipe-ud-2.5-191206/czech-pdt-ud-2.5-191206.udpipe\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -46,10 +46,10 @@
       "# newpar\n",
       "# sent_id = 1\n",
       "# text = Máma mele maso.\n",
-      "1\tMáma\tmáma\tNOUN\tNNFS1-----A----\tCase=Nom|Gender=Fem|Number=Sing|Polarity=Pos\t3\tnmod\t_\t_\n",
-      "2\tmele\tmele\tNOUN\tNNNXX-----A----\tGender=Neut|Polarity=Pos\t1\tnmod\t_\t_\n",
-      "3\tmaso\tmaso\tNOUN\tNNNS1-----A----\tCase=Nom|Gender=Neut|Number=Sing|Polarity=Pos\t0\troot\t_\tSpaceAfter=No\n",
-      "4\t.\t.\tPUNCT\tZ:-------------\t_\t3\tpunct\t_\tSpacesAfter=\\n\n",
+      "1\tMáma\tmáma\tNOUN\tNNFS1-----A----\tCase=Nom|Gender=Fem|Number=Sing|Polarity=Pos\t0\troot\t_\t_\n",
+      "2\tmele\tmele\tNOUN\tNNNXX-----A----\tGender=Neut|Polarity=Pos\t3\tnmod\t_\t_\n",
+      "3\tmaso\tmaso\tNOUN\tNNNS1-----A----\tCase=Nom|Gender=Neut|Number=Sing|Polarity=Pos\t1\tnmod\t_\tSpaceAfter=No\n",
+      "4\t.\t.\tPUNCT\tZ:-------------\t_\t1\tpunct\t_\tSpacesAfter=\\n\n",
       "\n",
       "\n"
      ]
@@ -137,9 +137,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".pcrenv64",
+   "display_name": "researchenv",
    "language": "python",
-   "name": ".pcrenv64"
+   "name": "researchenv"
   },
   "language_info": {
    "codemirror_mode": {
