--- a/research/src/udpipe_research.ipynb
+++ b/research/src/udpipe_research.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,30 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# newdoc\n",
-      "# newpar\n",
-      "# sent_id = 1\n",
-      "# text = Máma mele maso.\n",
-      "1\tMáma\tmáma\tNOUN\tNNFS1-----A----\tCase=Nom|Gender=Fem|Number=Sing|Polarity=Pos\t0\troot\t_\t_\n",
-      "2\tmele\tmele\tNOUN\tNNNXX-----A----\tGender=Neut|Polarity=Pos\t3\tnmod\t_\t_\n",
-      "3\tmaso\tmaso\tNOUN\tNNNS1-----A----\tCase=Nom|Gender=Neut|Number=Sing|Polarity=Pos\t1\tnmod\t_\tSpaceAfter=No\n",
-      "4\t.\t.\tPUNCT\tZ:-------------\t_\t1\tpunct\t_\tSpacesAfter=\\n\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# analyze a tokenized sentence with UDPipe\n",
     "# and print out the resulting CoNLL-U analysis\n",
-    "print(pipeline.process(\"Máma mele maso.\"))"
+    "conllu = pipeline.process(\"Máma mele maso.\")"
    ]
   },
   {
@@ -132,6 +115,116 @@
     "doc = nlp(text)\n",
     "for token in doc:\n",
     "    print(token.text, token.lemma_, token.pos_, token.dep_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from udapi.core.document import Document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = Document()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc.from_conllu_string(conllu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node = doc.bundles[0].trees[0].descendants[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node.get_attrs(['feats[Case]'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(node.feats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print(node._get_attr('feats[Case]'))\n",
+    "except AttributeError:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(node.)"
    ]
   }
  ],
