max contexts number limitation

--- a/research/src/subject_extraction.ipynb
+++ b/research/src/subject_extraction.ipynb
@@ -99,26 +99,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running query: select * from document where processed=True\n",
-      "Preparing total 1008 documents\n",
+      "Running query: select * from document where contract_id=48086\n",
+      "Preparing total 102 documents\n",
       "Progress: 0.0%\n",
       "Progress: 10.0%\n",
       "Progress: 20.0%\n",
       "Progress: 30.0%\n",
       "Progress: 40.0%\n",
       "Progress: 50.0%\n",
-      "Progress: 60.0%\n",
-      "Progress: 70.0%\n",
-      "Progress: 80.0%\n",
-      "Progress: 90.0%\n",
-      "Progress: 100.0%\n"
+      "Progress: 59.0%\n",
+      "Progress: 69.0%\n",
+      "Progress: 79.0%\n",
+      "Progress: 89.0%\n",
+      "Progress: 99.0%\n"
      ]
     }
    ],
